# ice-demos

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .globalconfig  .lychee.toml  .markdownlint.json  CONTRIBUTING.md  LICENSE  README  README.md  README.txt  ruff.toml  stylecop.json
certs/: README.md  (+12 more)
cpp/Chat/client/: CMakeLists.txt  ChatSession.ice  ChatUtils.cpp  ChatUtils.h  Client.cpp  Makefile.mk  PollingChat.ice  PollingClient.cpp  README.md  config.pollclient
cpp/Chat/server/: .gitignore  CMakeLists.txt  Chat.ice  ChatRoom.cpp  ChatRoom.h  ChatServer.cpp  ChatSession.ice  ChatSessionI.cpp  ChatSessionI.h  ChatSessionManagerI.cpp  ChatSessionManagerI.h  ChatUtils.cpp  ChatUtils.h  Makefile  Makefile.mak  Makefile.mk  PollingChat.ice  PollingChatSessionFactoryI.cpp  PollingChatSessionFactoryI.h  PollingChatSessionI.cpp  PollingChatSessionI.h  README.md  config.chatserver  config.glacier2router  server.vcxproj  server.vcxproj.filters
cpp/DataStorm/clock/: CMakeLists.txt  README.md  Reader.cpp  Writer.cpp
cpp/DataStorm/minimal/: CMakeLists.txt  Makefile.mk  README.md  Reader.cpp  Writer.cpp
cpp/DataStorm/stock/: .gitignore  CMakeLists.txt  README.md  Reader.cpp  Stock.ice  Writer.cpp
cpp/Glacier2/callback/: AlarmClock.ice  CMakeLists.txt  CallbackI.cpp  CallbackI.h  Client.cpp  Glacier2.callback.client.vcxproj  Glacier2.callback.client.vcxproj.filters  Glacier2.callback.server.vcxproj  Glacier2.callback.server.vcxproj.filters  Makefile  Makefile.mk  README.md  Server.cpp  SimpleWakeUpService.cpp  config.client  config.glacier2
cpp/Glacier2/session/: CMakeLists.txt  Client.cpp  DefaultPokeSession.cpp  DefaultPokeSession.h  IPokeStore.h  IUserIdResolver.h  InMemoryPokeStore.cpp  InMemoryPokeStore.h  PokeBox.ice  PokeStore.h  README.md  Server.cpp  SessionManager.cpp  SessionManager.h  SharedPokeBox.cpp  SharedPokeBox.h  UserIdResolver.h
cpp/Glacier2/simpleChat/: CMakeLists.txt  Chat.ice  ChatSessionI.cpp  ChatSessionI.h  Client.cpp  Glacier2.simpleChat.client.vcxproj  Glacier2.simpleChat.client.vcxproj.filters  Glacier2.simpleChat.server.vcxproj  Glacier2.simpleChat.server.vcxproj.filters  Makefile  Makefile.mk  README.md  Server.cpp  config.client  config.glacier2  config.server
cpp/Ice/async/: CMakeLists.txt  Client.cpp  HelloI.cpp  HelloI.h  Ice.async.client.vcxproj  Ice.async.client.vcxproj.filters  Ice.async.server.vcxproj  Ice.async.server.vcxproj.filters  Makefile  Makefile.mk  README.md  Server.cpp  WorkQueue.cpp  WorkQueue.h
cpp/Ice/bidir/: BidirWakeUpService.cpp  BidirWakeUpService.h  CMakeLists.txt  Callback.ice  CallbackI.cpp  CallbackI.h  Client.cpp  Ice.bidir.client.vcxproj  Ice.bidir.client.vcxproj.filters  Ice.bidir.server.vcxproj  Ice.bidir.server.vcxproj.filters  Makefile  MockAlarmClock.cpp  README.md  Server.cpp  config.client
cpp/Ice/callback/: AlarmClock.ice  CMakeLists.txt  Callback.ice  CallbackSenderI.cpp  CallbackSenderI.h  Client.cpp  Ice.callback.client.vcxproj  Ice.callback.client.vcxproj.filters  Ice.callback.server.vcxproj  Ice.callback.server.vcxproj.filters  Makefile  MockAlarmClock.h  README.md  Server.cpp  SimpleWakeUpService.cpp  SimpleWakeUpService.h  config.client  config.server
cpp/Ice/context/: CMakeLists.txt  Chatbot.cpp  Client.cpp  ContextI.cpp  ContextI.h  Ice.context.client.vcxproj  Ice.context.client.vcxproj.filters  Ice.context.server.vcxproj  Ice.context.server.vcxproj.filters  Makefile  README.md  Server.cpp  config.client
cpp/Ice/forwarder/: CMakeLists.txt  Client.cpp  Forwarder.cpp  Forwarder.h  ForwardingServer.cpp  README.md  Server.cpp
cpp/Ice/greeter/: CMakeLists.txt  Chatbot.cpp  Chatbot.h  ChatbotAMD.cpp  ChatbotAMD.h  Client.cpp  Greeter.ice  GreeterAMD.ice  README.md  Server.cpp  ServerAMD.cpp
cpp/Ice/greeterAsync/: CMakeLists.txt  Chatbot.cpp  Chatbot.h  Client.cpp  Greeter.ice  README.md  Server.cpp
cpp/Ice/inheritance/: .gitignore  CMakeLists.txt  Client.cpp  Inheritance.ice  Memory.cpp  Memory.h  README.md  Server.cpp
cpp/Ice/interceptor/: AuthenticatorI.cpp  AuthenticatorI.h  CMakeLists.txt  Client.cpp  InterceptorI.cpp  InterceptorI.h  README.md  Server.cpp  ThermostatI.cpp  ThermostatI.h  config.server
cpp/Ice/interleaved/: CMakeLists.txt  Client.cpp  Ice.interleaved.client.vcxproj  Ice.interleaved.client.vcxproj.filters  Ice.interleaved.server.vcxproj  Ice.interleaved.server.vcxproj.filters  Makefile  README.md  Server.cpp  Throughput.ice  ThroughputI.cpp  ThroughputI.h  config.client  config.server
cpp/Ice/invoke/: .gitignore  CMakeLists.txt  Client.cpp  Ice.invoke.client.vcxproj  Ice.invoke.client.vcxproj.filters  Ice.invoke.server.vcxproj  Ice.invoke.server.vcxproj.filters  Makefile  Printer.ice  PrinterI.cpp  PrinterI.h  README.md  Server.cpp  config.client  config.server
cpp/Ice/latency/: CMakeLists.txt  Client.cpp  Ice.latency.client.vcxproj  Ice.latency.client.vcxproj.filters  Ice.latency.server.vcxproj  Ice.latency.server.vcxproj.filters  Latency.ice  Makefile  README.md  Server.cpp  config.client  config.server
cpp/Ice/mtalk/: CMakeLists.txt  Client.cpp  MTalk.ice  README.md  config
cpp/Ice/multicast/: .gitignore  CMakeLists.txt  Client.cpp  Discovery.ice  Hello.ice  Ice.multicast.client.vcxproj  Ice.multicast.client.vcxproj.filters  Ice.multicast.server.vcxproj  Ice.multicast.server.vcxproj.filters  Makefile  README.md  Server.cpp  config.client  config.server
cpp/Ice/nested/: .gitignore  CMakeLists.txt  Client.cpp  Ice.nested.client.vcxproj  Ice.nested.client.vcxproj.filters  Ice.nested.server.vcxproj  Ice.nested.server.vcxproj.filters  Makefile  Makefile.mk  Nested.ice  NestedI.cpp  NestedI.h  README.md  Server.cpp  config.client  config.server
cpp/Ice/optional/: .gitignore  CMakeLists.txt  Client.cpp  Client1.cpp  Client2.cpp  ConsolePrinter1.cpp  ConsolePrinter1.h  ConsolePrinter2.cpp  ConsolePrinter2.h  Contact.ice  ContactDBI.cpp  ContactDBI.h  Ice.optional.client.vcxproj  Ice.optional.client.vcxproj.filters  Ice.optional.server.vcxproj  Ice.optional.server.vcxproj.filters  Makefile  README.md  Server.cpp  Server1.cpp  Server2.cpp  (+1 more)
(+7702 files in other folders)
